# search_engine

./: .gitignore  pyproject.toml
src/: constants.py  index_type.py  inverted_index.py  parse_aozora.py  search.py  utils.py
