[tool.poetry]
name = "search_engine"
version = "0.1.0"
description = ""
authors = ["yokoc1322 <6673423+yokoc1322@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
flake8 = "^3.8.3"
pylint = "^2.6.0"
pytest = "^6.0.2"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
